# bapco

./: .gitignore
workload/: CMakeLists.txt  compress_workload.cpp  decompress_workload.cpp  input.txt  workload.cpp
zstd/.github/workflows/: android-ndk-build.yml  cmake-tests.yml  commit.yml  dev-long-tests.yml  dev-short-tests.yml  nightly.yml  publish-release-artifacts.yml  release_check.yml  scorecards.yml  windows-artifacts.yml
